--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ yarn-error.log
 .env.production.local
 
 # Logs
+
 logs
 *.log
 npm-debug.log*
@@ -45,3 +46,5 @@ docker-compose.override.yml
 # Otros archivos sensibles
 *.pem
 *.key
+
+package-lock.json
